Adding some control features + crude hook

--- a/HeliResc/Assembly-CSharp.csproj
+++ b/HeliResc/Assembly-CSharp.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\CopterManager.cs" />
+     <Compile Include="Assets\Scripts\HookLineManager.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>D:/Unity/Data/UnityExtensions/Unity/GUISystem/4.6.1/UnityEngine.UI.dll</HintPath>
  </Reference>
